<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <com.ssd.mobile.android.memo.ui.view.HeaderView
            android:id="@+id/headerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:header_next="@string/save"
            app:header_title="@string/write_memo"
            app:header_type="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/memoEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="13dp"
            android:background="@drawable/round16_black_background_white"
            android:hint="@string/memo_hint"
            android:minHeight="67dp"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerView" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/memoWriteBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="memoEditText" />

        <TextView
            android:id="@+id/memoDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:background="@drawable/delete_button"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/memoEditText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/memoWriteBarrier"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>